force-app/main/default/objects/Team_Member__c/fields/Assignment_Counter__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Assignment Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>