force-app/main/default/objects/Team_Member__c/fields/DayOff__c.field-meta.xml
<CustomField>
    <fullName>DayOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DayOff</label>
    <type>Checkbox</type>
</CustomField>