force-app/main/default/objects/Team_Member__c/fields/Is_User_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is User Active</label>
    <type>Checkbox</type>
</CustomField>