force-app/main/default/objects/Team_Member__c/fields/Last_Assignment_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Milliseconds__c</fullName>
    <label>Last Assignment Milliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>