force-app/main/default/objects/Team_Member__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <inlineHelpText>This field is used in for Approval Purpose Only. Otherwise keep value as &quot;Not Applicable&quot;</inlineHelpText>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>SM Approver</fullName>
            </value>
            <value>
                <fullName>TL Approver</fullName>
            </value>
            <value>
                <fullName>Site Head Approver</fullName>
            </value>
            <value>
                <fullName>Management Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>